--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,3 @@
 {
-  "plugins": ["transform-flow-comments", "transform-object-rest-spread"]
+  "plugins": ["@babel/plugin-transform-flow-comments", "@babel/plugin-proposal-object-rest-spread"]
 }
